--- a/main.c.012t.cfg
+++ b/main.c.012t.cfg
@@ -12,16 +12,19 @@ Removing basic block 3
 ;; 3 succs { 1 }
 main ()
 {
-  int d;
-  int D.1914;
+  int c;
+  int b;
+  int a;
+  int D.1916;
 
   <bb 2> :
-  d = 4;
-  D.1914 = 0;
+  a = 12;
+  b = 9;
+  D.1916 = 0;
 
   <bb 3> :
 <L0>:
-  return D.1914;
+  return D.1916;
 
 }
 
